# genesys-adversaries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  World.cpp  World.h  adversary-to-tokens.c  adversary.l  adversary.y  ast.c  ast.h  attribute.c  attribute.h  character.c  character.h  configure.h.in  example.adv  installer.nsis.in  lex.yy.c  lexer.c  lexer.cpp  lexer.h  lexer.re  main.c  namedlist.cpp  namedlist.h  parser.c  parser.h  symbol-to-name.cpp  terminal_tags.h  token.c  token.h  world.cpp  world.h
data/: core.adv  fantasy.adv  modern.adv  quick.adv  sciencefiction.adv  spaceopera.adv  steampunk.adv  weirdwar.adv
test/: CMakeLists.txt  golden.txt  goldentest.sh  samplenpcs.adv  sampleworld.adv  test_ast.c  test_ast.cpp  test_character.c  test_lexer.c  test_lexer.cpp  test_parser.c  test_parser.cpp  test_world.cpp  testmain.c
